tests/ui/privacy/where-priv-type.stderr
warning: type `PrivTy` is more private than the item `S`
  --> $DIR/where-priv-type.rs:21:1
   |
LL | pub struct S
   | ^^^^^^^^^^^^ struct `S` is reachable at visibility `pub`
   |
note: but type `PrivTy` is only usable at visibility `pub(crate)`
  --> $DIR/where-priv-type.rs:8:1
   |
LL | struct PrivTy;
   | ^^^^^^^^^^^^^
   = note: `#[warn(private_bounds)]` on by default

warning: type `PrivTy` is more private than the item `E`
  --> $DIR/where-priv-type.rs:26:1
   |
LL | pub enum E
   | ^^^^^^^^^^ enum `E` is reachable at visibility `pub`
   |
note: but type `PrivTy` is only usable at visibility `pub(crate)`
  --> $DIR/where-priv-type.rs:8:1
   |
LL | struct PrivTy;
   | ^^^^^^^^^^^^^

warning: type `PrivTy` is more private than the item `f`
  --> $DIR/where-priv-type.rs:31:1
   |
LL | / pub fn f()
LL | |
LL | | where
LL | |     PrivTy:,
   | |____________^ function `f` is reachable at visibility `pub`
   |
note: but type `PrivTy` is only usable at visibility `pub(crate)`
  --> $DIR/where-priv-type.rs:8:1
   |
LL | struct PrivTy;
   | ^^^^^^^^^^^^^

warning: type `PrivTy` is more private than the item `S`
  --> $DIR/where-priv-type.rs:38:1
   |
LL | / impl S
LL | |
LL | | where
LL | |     PrivTy:,
   | |____________^ implementation `S` is reachable at visibility `pub`
   |
note: but type `PrivTy` is only usable at visibility `pub(crate)`
  --> $DIR/where-priv-type.rs:8:1
   |
LL | struct PrivTy;
   | ^^^^^^^^^^^^^

warning: type `PrivTy` is more private than the item `S::f`
  --> $DIR/where-priv-type.rs:43:5
   |
LL | /     pub fn f()
LL | |
LL | |     where
LL | |         PrivTy:,
   | |________________^ associated function `S::f` is reachable at visibility `pub`
   |
note: but type `PrivTy` is only usable at visibility `pub(crate)`
  --> $DIR/where-priv-type.rs:8:1
   |
LL | struct PrivTy;
   | ^^^^^^^^^^^^^

error[E0446]: private type `fn(u8) -> u8 {my_const_fn}` in public interface
  --> $DIR/where-priv-type.rs:66:5
   |
LL |     type AssocTy = Const<{ my_const_fn(U) }>;
   |     ^^^^^^^^^^^^ can't leak private type
...
LL | const fn my_const_fn(val: u8) -> u8 {
   | ----------------------------------- `fn(u8) -> u8 {my_const_fn}` declared as private

error[E0446]: private type `fn(u8) -> u8 {my_const_fn}` in public interface
  --> $DIR/where-priv-type.rs:66:5
   |
LL |     type AssocTy = Const<{ my_const_fn(U) }>;
   |     ^^^^^^^^^^^^ can't leak private type
...
LL | const fn my_const_fn(val: u8) -> u8 {
   | ----------------------------------- `fn(u8) -> u8 {my_const_fn}` declared as private
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors; 5 warnings emitted

For more information about this error, try `rustc --explain E0446`.
